<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".FragmentMoviesList">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/movieCard1"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="102dp"
            android:layout_marginEnd="13dp"
            android:background="@drawable/movie_card"
            app:layout_constraintEnd_toStartOf="@id/movieCard2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/movieCard2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintBottom_toBottomOf="@id/movieCard1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movieCard1"
            app:layout_constraintTop_toTopOf="@id/movieCard1" />

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/poster_image_desc"
            android:scaleType="fitXY"
            android:src="@drawable/avengers_card"
            app:layout_constraintBottom_toBottomOf="@+id/movieCard1"
            app:layout_constraintEnd_toEndOf="@+id/movieCard1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/movieCard1"
            app:layout_constraintTop_toTopOf="@+id/movieCard1"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/maskPoster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/mask_poster"
            app:layout_constraintBottom_toBottomOf="@+id/moviePoster"
            app:layout_constraintEnd_toEndOf="@id/movieCard1"
            app:layout_constraintStart_toStartOf="@id/movieCard1"
            app:layout_constraintTop_toTopOf="@id/moviePoster" />

        <ImageView
            android:id="@+id/targetIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_target"
            app:layout_constraintEnd_toStartOf="@id/moviesListTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/moviesListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="55dp"
            android:text="@string/movies_list_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/targetIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rateText1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rate_background"
            android:gravity="center"
            android:text="@string/avengers_rate"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/movieCard1"
            app:layout_constraintTop_toTopOf="@+id/movieCard1" />

        <ImageView
            android:id="@+id/likeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="@+id/movieCard1"
            app:layout_constraintTop_toTopOf="@+id/movieCard1" />

        <ImageView
            android:id="@+id/starIcon11"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/star_icon_desc"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@+id/starIcon12"
            app:layout_constraintStart_toStartOf="@id/genreTitle"
            app:layout_constraintTop_toBottomOf="@id/genreTitle"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/activity_color" />

        <ImageView
            android:id="@+id/starIcon12"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/star_icon_desc"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@id/starIcon13"
            app:layout_constraintStart_toEndOf="@id/starIcon11"
            app:layout_constraintTop_toBottomOf="@id/genreTitle"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/activity_color" />

        <ImageView
            android:id="@+id/starIcon13"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/star_icon_desc"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@id/starIcon14"
            app:layout_constraintStart_toEndOf="@id/starIcon12"
            app:layout_constraintTop_toBottomOf="@id/genreTitle"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/activity_color" />

        <ImageView
            android:id="@+id/starIcon14"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/star_icon_desc"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@id/starIcon15"
            app:layout_constraintStart_toEndOf="@id/starIcon13"
            app:layout_constraintTop_toBottomOf="@id/genreTitle"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/activity_color" />

        <ImageView
            android:id="@+id/starIcon15"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/star_icon_desc"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@+id/countReview1"
            app:layout_constraintStart_toEndOf="@id/starIcon14"
            app:layout_constraintTop_toBottomOf="@id/genreTitle"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/review_color" />

        <TextView
            android:id="@+id/countReview1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:text="@string/avengers_count_review"
            android:textColor="@color/review_color"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/genreTitle"
            app:layout_constraintStart_toEndOf="@+id/starIcon15"
            app:layout_constraintTop_toBottomOf="@id/genreTitle" />

        <TextView
            android:id="@+id/genreTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="22dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/avengers_genre"
            android:textColor="@color/activity_color"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/moviePoster"
            app:layout_constraintEnd_toEndOf="@+id/moviePoster"
            app:layout_constraintStart_toStartOf="@+id/moviePoster" />

        <TextView
            android:id="@+id/durationTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/avengers_duration"
            android:textColor="@color/duration_color"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/movieCard1"
            app:layout_constraintStart_toStartOf="@+id/moviePoster"
            app:layout_constraintTop_toBottomOf="@id/movieTitle" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/avengers_title_one_line"
            android:textColor="@color/title_white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/movieCard1"
            app:layout_constraintStart_toStartOf="@+id/moviePoster" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>